--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,28 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.android.support:recyclerview-v7:27.1.1' // RecyclerView
+    implementation 'com.jakewharton:butterknife:8.8.1' // Glide
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1' // Butterknife
+    implementation 'com.android.support:cardview-v7:27.1.1' // CardView
+    implementation 'com.jakewharton.timber:timber:4.7.0' // Timber
+    implementation 'com.android.support:multidex:1.0.3' // MultiDex
+    implementation 'com.android.support:design:27.1.1' // Floating Action Button
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4' // LeakCanary
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4' // LeakCanary
+
+    // Add Retrofit, Dagger2, LiveData, ViewModel
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0' // Retrofit
+    implementation 'com.google.dagger:dagger:2.11' // Dagger 2
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11' // Dagger 2
+    implementation 'com.google.dagger:dagger-android:2.11' // Dagger Android
+    implementation 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries for Dagger
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.x'
+    implementation "android.arch.lifecycle:extensions:1.1.1" // LiveData and ViewModel
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1" // LiveData and ViewModel
+
+
+
+
 }
