Setup Retrofit call within ViewModel - null point error exists

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.clidev.gamecodex"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -38,13 +38,19 @@ dependencies {
 
     // Add Retrofit, Dagger2, LiveData, ViewModel
     implementation 'com.squareup.retrofit2:retrofit:2.4.0' // Retrofit
+    implementation 'com.google.code.gson:gson:2.8.5' // gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0' // gson converter
+
     implementation 'com.google.dagger:dagger:2.11' // Dagger 2
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11' // Dagger 2
     implementation 'com.google.dagger:dagger-android:2.11' // Dagger Android
     implementation 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries for Dagger
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.x'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+
     implementation "android.arch.lifecycle:extensions:1.1.1" // LiveData and ViewModel
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1" // LiveData and ViewModel
+
+    implementation 'com.github.igdb:api-android-java:1.1'
 
 
 
