--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:recyclerview-v7:27.1.1' // RecyclerView
-    implementation 'com.jakewharton:butterknife:8.8.1' // Glide
+    implementation 'com.jakewharton:butterknife:8.8.1' // Butterknife
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1' // Butterknife
     implementation 'com.android.support:cardview-v7:27.1.1' // CardView
     implementation 'com.jakewharton.timber:timber:4.7.0' // Timber
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1' // Floating Action Button
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4' // LeakCanary
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4' // LeakCanary
+    implementation 'com.github.bumptech.glide:glide:4.7.1' // Glide
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1' // Glide
 
     // Add Retrofit, Dagger2, LiveData, ViewModel
     implementation 'com.squareup.retrofit2:retrofit:2.4.0' // Retrofit
