--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1" // LiveData and ViewModel
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1" // LiveData and ViewModel
 
+    implementation "android.arch.persistence.room:runtime:1.1.1" // Room
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1" // Room
+
     implementation 'com.github.igdb:api-android-java:1.1'
 
 
