--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".populargames.view.PopularGamesActivity">
+        <activity android:name=".populargames.view.PopularGamesActivity"></activity>
+        <activity android:name=".gamedetails.view.GameDetailsActivity" />
+        <activity android:name=".launchscreen.view.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".gamedetails.view.GameDetailsActivity"></activity>
     </application>
 
 </manifest>
