Moved room code to a separate global folder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".populargames.view.PopularGamesActivity"></activity>
         <activity android:name=".gamedetails.view.GameDetailsActivity" />
-        <activity android:name=".launchscreen.view.LaunchActivity">
+        <activity android:name=".launchscreen.view.LaunchActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
