--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
     <application
         android:name=".StarterApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/igdb_logogit "
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/igdb_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".populargamescreen.view.PopularGamesActivity"></activity>
