--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".StarterApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/igdb_logogit "
+        android:icon="@mipmap/igdb_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/igdb_logo"
         android:supportsRtl="true"
